# retargeting

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.conductor/: settings.yaml
app/: CMakeLists.txt
app/examples/: retarget_align.cpp  retarget_probe.cpp  spatialmp4_g1_rerun.cpp  spatialmp4_to_g1.cpp  spatialmp4_to_galbot_dual_arm.cpp  upper_body_demo.cpp
app/include/retargeting/: algorithm.hpp  builtins.hpp  retargeter.hpp  scenario.hpp  types.hpp  version.hpp.in
app/src/algorithms/: algorithm_registry.cpp  builtins.cpp
app/src/algorithms/dual_arm_eepose/: dual_arm_eepose_algorithm.cpp  dual_arm_eepose_algorithm.hpp
app/src/algorithms/gmr/: gmr_algorithm.cpp  gmr_algorithm.hpp  gmr_solver.cpp  gmr_solver.hpp
app/src/business/: retargeter.cpp
app/src/core/: box_qp.cpp  box_qp.hpp  lie.cpp  lie.hpp
app/src/sources/: quest3_source.hpp
app/src/utils/: one_euro_filter.cpp  one_euro_filter.hpp
apps/: retarget_align.cpp  retarget_probe.cpp
cicd/: build_android.sh  build_desktop.sh  release.sh  test_spatialmp4_g1.sh  test_spatialmp4_galbot_dual_arm.sh
claw/sop/: release.md
cmake/: nlohmann_json.cmake  rerun.cmake
data/ik_configs/: dual_arm_eepose_galbot_g1.json  quest3_upper_to_g1.json
data/reference/: qpos_upper_body_g1_f200_fps30_h1.75.csv
data/robot/unitree_g1/: .g1_pinocchio_tmp.xml  g1_mocap_29dof_nomesh.xml
include/retargeting/: algorithm_registry.hpp
src/core/: kinematics_backend.hpp  mujoco_backend.cpp  mujoco_backend.hpp  pinocchio_backend.cpp  pinocchio_backend.hpp
src/sources/: quest3_source.cpp
tools/: README.md  analyze_g1_debug.py  compare_glb_rest.py  extract_spatialmp4_body_joints.py  render_g1.py  render_galbot_dual_arm.py
